# forgexpackages

./: .gitignore  README.md  debug_bulk_create.py  pyproject.toml  test_full_model_switching.py  test_model_switching.py  test_switch_add.py  test_ws889.py  test_ws890_current_models.py
src/common_adapters/: http_client.py
src/common_adapters.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/common_adapters/ado_tool_integration/: README.md  azure_devops_client_for_llm.py  azure_devops_client_manager.py  azure_devops_graph.py  azure_devops_prompts.py  azure_devops_tools.py  setup.py
src/common_adapters/ai/: base.py  config.py
src/common_adapters/cache/: __init__.py  base_cache.py
src/common_adapters/cancel_convesation/: README.md  __init__.py  api.py
src/common_adapters/configurableAI/: README.md  TEAM_README.md  __init__.py  config.py  examples.py  langchain_adapter.py  llm_router.py  llm_router_config_store.py  manager.py  providers.py  setup.py
src/common_adapters/context_compaction/: __init__.py  compactor.py  strategies.py  token_counter.py
src/common_adapters/database/: base.py  documentdb_adapter.py
src/common_adapters/doc_extract/: parsing.py
src/common_adapters/download_response/: download.py  markdown2pdf.py  setup.py
src/common_adapters/error_security/: __init__.py  error_handling.py  security_patterns.py
src/common_adapters/github_tool_integration/: __init__.py  github_client_for_llm.py  github_client_manager.py  github_connection.py  github_graph.py  github_prompts.py  github_tools.py  (+1 more)
tests/unit/: test_openai_adapter.py
(+38 files in other folders)
